# lgvsdashboard

./: .env.example  .gitignore  Makefile  README.md  Taskfile.yml  pyproject.toml
docs/: ALL_METRICS.xlsx  CAMPAIGN_IMPACT_SPEC.md  DASHBOARD_OVERVIEW.md  DASHBOARD_SPEC.md  DASHBOARD_STRATEGY.md  DASHBOARD_UPGRADE_SPEC.md  DETAIL_REFERENCE_SPEC.md  HOME_DASHBOARD_SPEC.md  LG_VS_Campaign_Measurement_Shift.pptx  LG_VS_Dashboard_Metrics.pptx  LG_VS_Dashboard_Overview.pptx  LG_VS_Dashboard_Strategy.docx  LG_VS_Dashboard_Structure.pptx  METRICS_GUIDE.docx  METRICS_GUIDE.md  METRICS_SUMMARY_TABLE.docx  METRICS_SUMMARY_TABLE.md  METRICS_SUMMARY_TABLE.xlsx  RALPH_LOOP_REVIEW.md  REVIEW_FLOW_SPEC.md  TECH_SPEC.md  ~$LG_VS_Campaign_Measurement_Shift.pptx  ~$_VS_Dashboard_Strategy.docx
frontend/: README.md  capture.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/campaign/: page.tsx
frontend/app/campaign-impact/: page.tsx
frontend/config/: constants.ts  navigation.ts  theme.ts
frontend/data/: campaign-impact-data.ts  detail-reference-data.ts  home-data.ts  review-flow-data.ts  seed.ts  settings.ts
frontend/lib/: calculations.ts  campaign-helpers.ts  formatters.ts  utils.ts
frontend/stores/: context-store.ts
frontend/types/: campaign.ts  funnel.ts  index.ts  metrics.ts  technology.ts
scripts/: backup.sh  capture_screenshots.js  com.lgvs.geo.daily.plist  create_ppt.py  daily-collect.sh  install-cron.sh
src/linkedin_intel/: __init__.py  cli.py  config.py  utils.py
tests/: test_utils.py
(+62 files in other folders)
