[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-intel"
version = "1.0.0"
description = "LG VS(전장) GEO/AIO LinkedIn 키워드 모니터링 시스템"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "LG VS Team" }]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.25.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ruff>=0.4.0", "black>=24.0.0", "mypy>=1.8.0"]

[project.scripts]
geo = "linkedin_intel.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_intel"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
